prusti-tests/tests/parse/ui/exists_fail.stderr
error: expected parenthesized expression after quantifier
 --> $DIR/exists_fail.rs:8:12
  |
8 | #[requires(exists)]
  |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:11:12
   |
11 | #[requires(exists())]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:14:12
   |
14 | #[requires(exists(|))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:17:12
   |
17 | #[requires(exists(||) 1+1)]
   |            ^^^^^^

error: quantifier arguments must have explicit types
  --> $DIR/exists_fail.rs:20:20
   |
20 | #[requires(exists(|a, b| true))]
   |                    ^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:23:12
   |
23 | #[requires(exists(||) || exists(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:26:12
   |
26 | #[requires(exists(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:29:12
   |
29 | #[requires(exists(|| true, triggers=[(1,2), (1,)]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:32:12
   |
32 | #[requires(exists(|| true, triggers=1))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:35:12
   |
35 | #[requires(exists(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:38:12
   |
38 | #[requires(exists(|| 1+1 == 1+1))]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:41:12
   |
41 | #[requires(exists(||, triggers=[]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:44:12
   |
44 | #[requires(exists(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: trigger sets must be tuples of expressions
  --> $DIR/exists_fail.rs:47:43
   |
47 | #[requires(exists(|a: i32| true, triggers=[1]))]
   |                                           ^^^

error: trigger sets must be tuples of expressions
  --> $DIR/exists_fail.rs:50:43
   |
50 | #[requires(exists(|a: i32| true, triggers=[(1, 2), 1,]))]
   |                                           ^^^^^^^^^^^^

error: aborting due to 15 previous errors

